Add client route protection, user context